--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<h1>
-  {{title}}
-</h1>
+<app-ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"
+                     [group]="group"></app-ng-autocomplete>
