Updated README.md with explanation, renamed app-ng-autocomplete -> ng-autocomplete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"
-                     [group]="group"></app-ng-autocomplete>
+<ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"
+                     [group]="group"></ng-autocomplete>
