--- a/src/styles.css
+++ b/src/styles.css
@@ -450,7 +450,97 @@ template {
     display: none;
 }
 
+.fifty:first-child {
+    float: none;
+}
+
 .fifty {
     width: 50%;
     float: left;
+}
+
+.ng-autocomplete-dropdown {
+    position: relative;
+    margin-top: 25px;
+    height: 200px;
+}
+.ng-autocomplete-dropdown .ng-autocomplete-inputs {
+    position: relative;
+}
+.ng-autocomplete-dropdown .ng-autocomplete-inputs input {
+    width: 100%;
+    padding: 6px 20px;
+    font-family: Arial;
+    font-weight: normal;
+    outline: none !important;
+    font-size: 15px;
+    height: 56px;
+    border: 1px solid #e0e0e0;
+}
+.ng-autocomplete-dropdown .ng-autocomplete-inputs:after {
+    content: '';
+    display: block;
+    width: 56px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    border-left: 1px solid #e0e0e0;
+    pointer-events: none;
+    font-size: 12px;
+    color: #758694;
+    padding: 21px 0;
+}
+.ng-autocomplete-dropdown .ng-autocomplete-inputs:before {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-top: 7px solid #000;
+    position: absolute;
+    right: 21px;
+    z-index: 999;
+    top: 24px;
+}
+.ng-autocomplete-dropdown .ng-autocomplete-placeholder {
+    position: absolute;
+    margin: 3px;
+    background-color: #fff;
+    padding: 17px 18px;
+    font-family: Arial;
+    font-weight: normal;
+    font-size: 15px;
+    width: calc(100% - 4px);
+}
+.ng-autocomplete-dropdown .ng-dropdown {
+    display: none;
+    border: 1px solid #e0e0e0;
+    z-index: 99999;
+    max-height: 280px;
+    overflow-x: hidden;
+    position: absolute;
+    width: 100%;
+}
+.ng-autocomplete-dropdown .ng-dropdown.open {
+    display: block;
+}
+.ng-autocomplete-dropdown .ng-dropdown .dropdown-item {
+    width: 100%;
+    cursor: pointer;
+    padding: 18px 20px;
+    font-family: Arial;
+    font-weight: normal;
+    font-size: 15px;
+    height: 56px;
+    background-color: #ffffff;
+}
+.ng-autocomplete-dropdown .ng-dropdown .dropdown-item:nth-child(odd) {
+    background-color: #efefef;
+}
+.ng-autocomplete-dropdown .ng-dropdown .dropdown-item.active {
+    background-color: #0099cc;
+    color: #fff !important;
 }
