--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"
-                     [group]="group"></ng-autocomplete>
+                     [group]="group1" [key]="'group1'"></ng-autocomplete>
+
+<ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"
+                 [group]="group2" [key]="'group2'"></ng-autocomplete>
