## [1.2.8] - 2017-07-15. ### New Functionality. - It's now possible to instantiate CreateNewAutocompleteGroup with an empty array and set its value later. This can be useful when you're waiting for an async task to complete.      ```         const component = NgAutocompleteComponent.FindCompleter('completer', this.completers);         component.SetValues(             'late', // <-- NOTE: this is the key of the input. You can call this what you want.             [                 {title: 'Option 4', id: '1'},                 {title: 'Option 5', id: '2'},                 {title: 'Option 6', id: '3'},                 {title: 'Option 7', id: '4'},                 {title: 'Option 8', id: '5'},                 {title: 'Option 9', id: '6'},             ]         )      ```
- Created new pipe to highlight search query. class `dropdown-item-highlight`
### Changes
- CreateNewAutocompleteGroup now accepts {id:string|number}, before only {id:string}
- Some small changes.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,14 @@
 </div>
 
 <div>
+    <button (click)="SetValues()">SET</button>
     <ng-autocomplete (selected)="Selected($event)" [classes]="['']"
                      [group]="group3" [key]="'group3'"></ng-autocomplete>
+    <div style="clear: both;"></div>
+</div>
+
+<div>
+    <ng-autocomplete (selected)="Selected($event)" [classes]="['']"
+                     [group]="group4" [key]="'group4'"></ng-autocomplete>
     <div style="clear: both;"></div>
 </div>
