toString methods on id's to compare removable values.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,3 +22,10 @@
                      [group]="group4" [key]="'group4'"></ng-autocomplete>
     <div style="clear: both;"></div>
 </div>
+
+<div>
+    <h1>REMOVE</h1>
+    <ng-autocomplete (selected)="RemoveSelected($event)" [classes]="['']"
+                     [group]="group5" [key]="'group5'"></ng-autocomplete>
+    <div style="clear: both;"></div>
+</div>
