--- a/src/styles.css
+++ b/src/styles.css
@@ -477,34 +477,7 @@ body {
     height: 56px;
     border: 1px solid #e0e0e0;
 }
-.ng-autocomplete-dropdown .ng-autocomplete-inputs:after {
-    content: '';
-    display: block;
-    width: 56px;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    border-left: 1px solid #e0e0e0;
-    pointer-events: none;
-    font-size: 12px;
-    color: #758694;
-    padding: 21px 0;
-}
-.ng-autocomplete-dropdown .ng-autocomplete-inputs:before {
-    content: '';
-    display: block;
-    width: 0;
-    height: 0;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-top: 7px solid #000;
-    position: absolute;
-    right: 21px;
-    z-index: 999;
-    top: 24px;
-}
+
 .ng-autocomplete-dropdown .ng-autocomplete-placeholder {
     position: absolute;
     margin: 3px;
@@ -547,4 +520,39 @@ body {
 
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item .dropdown-item-highlight {
     font-weight: bold;
+}
+
+.ng-autocomplete-dropdown-icon {
+    display: block;
+    width: 56px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    border-left: 1px solid #e0e0e0;
+    cursor: pointer;
+    z-index: 999;
+    font-size: 12px;
+    color: #758694;
+    padding: 21px 0;
+
+}
+
+.ng-autocomplete-dropdown-icon:after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-top: 7px solid #000;
+    position: absolute;
+    right: 21px;
+    z-index: 999;
+    top: 24px;
+}
+
+.ng-autocomplete-dropdown-icon.open:after {
+    transform: rotate(180deg);
 }
