## [1.5.12], [1.6.12], [1.7.12] - 2017-08-29. - A lot of internal changes & bugfixes. - In some cases when the a view has a hidden ng-content, that shows if an expression evaluates to true and   a completer function has been used e.g(`SelectItem('completer', 5)`) it would give an error; completer view is not   initialized.   - Functions that are called before the completer view has been initialized are now queued to be fired when the view     is actually initialized.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,37 @@
-<div>
-    <ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"
-                     [group]="group1" [key]="'group1'"></ng-autocomplete>
-    <div style="clear: both;"></div>
-</div>
+<!--<div>-->
+    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"-->
+                     <!--[group]="group1" [key]="'group1'"></ng-autocomplete>-->
+    <!--<div style="clear: both;"></div>-->
+<!--</div>-->
+
+<!--<div>-->
+    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"-->
+                     <!--[group]="group2" [key]="'group2'"></ng-autocomplete>-->
+    <!--<div style="clear: both;"></div>-->
+<!--</div>-->
+
+<!--<div>-->
+    <!--<button (click)="SetValues()">SET</button>-->
+    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['']"-->
+                     <!--[group]="group3" [key]="'group3'"></ng-autocomplete>-->
+    <!--<div style="clear: both;"></div>-->
+<!--</div>-->
+
+<!--<div>-->
+    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['']"-->
+                     <!--[group]="group4" [key]="'group4'"></ng-autocomplete>-->
+    <!--<div style="clear: both;"></div>-->
+<!--</div>-->
+
+<!--<div>-->
+    <!--<h1>REMOVE</h1>-->
+    <!--<ng-autocomplete (selected)="RemoveSelected($event)" [classes]="['']"-->
+                     <!--[group]="group5" [key]="'group5'"></ng-autocomplete>-->
+    <!--<div style="clear: both;"></div>-->
+<!--</div>-->
 
 <div>
-    <ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"
-                     [group]="group2" [key]="'group2'"></ng-autocomplete>
-    <div style="clear: both;"></div>
-</div>
-
-<div>
-    <button (click)="SetValues()">SET</button>
-    <ng-autocomplete (selected)="Selected($event)" [classes]="['']"
-                     [group]="group3" [key]="'group3'"></ng-autocomplete>
-    <div style="clear: both;"></div>
-</div>
-
-<div>
-    <ng-autocomplete (selected)="Selected($event)" [classes]="['']"
-                     [group]="group4" [key]="'group4'"></ng-autocomplete>
-    <div style="clear: both;"></div>
-</div>
-
-<div>
-    <h1>REMOVE</h1>
-    <ng-autocomplete (selected)="RemoveSelected($event)" [classes]="['']"
-                     [group]="group5" [key]="'group5'"></ng-autocomplete>
-    <div style="clear: both;"></div>
+    <app-ng-view>
+        <app-ng-holder></app-ng-holder>
+    </app-ng-view>
 </div>
