## [2.8.12] - 2018-05-09. ### New Functionality. - Created new functions to add custom ng-templates.   - Every ng template receives a context that's equal to an AutocompleteItem type. Except for the dropdownValue, this receives a hightlight too. see example   - template parameter must be of type: dropdownValue | placeholderValue | noResults

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,18 @@
     <div style="clear: both;"></div>
 </div>
 
+<ng-template #dropdownValue let-value let-hightlight="highlight">
+    <div [innerHTML]="hightlight"></div>
+</ng-template>
+
+<ng-template #placeholderValue let-value>
+    {{value.title}}
+</ng-template>
+
+<ng-template #noResults let-value>
+  Hey, you searched for: {{value}}. But there are no results!
+</ng-template>
+
 <!--<div>-->
     <!--<app-ng-view>-->
         <!--<app-ng-holder></app-ng-holder>-->
