## [2.10.0] - 2018-05-14. - Changes to behaviour of the dropdown (mainly for async).   - Dropdown now only opens when there's a default value at start. It will stay closed until it has a list to show. -- Represented by the class: is-initial-empty.   - Dropdown now has a loading class; is-loading.   - Internal changes to keep the new code compatible with new behaviour.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
 <!--</div>-->
 
 <div>
-    <ng-autocomplete (selected)="RemoveSelected($event)"
+    <ng-autocomplete (selected)="Selected($event)"
                      (no-result)="NoResult($event)"
                      [classes]="['']"
                      [group]="groupStress1" [key]="'item1'"></ng-autocomplete>
