--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,10 +24,10 @@
 <!--</div>-->
 
 <div>
-    <ng-autocomplete (selected)="Selected($event)"
+    <ng-auto-complete (selected)="Selected($event)"
                      (no-result)="NoResult($event)"
                      [classes]="['']"
-                     [group]="groupStress1" [key]="'item1'"></ng-autocomplete>
+                     [group]="groupStress1" [key]="'item1'"></ng-auto-complete>
     <div style="clear: both;"></div>
 </div>
 
