--- a/src/app/ng-holder/ng-holder.component.html
+++ b/src/app/ng-holder/ng-holder.component.html
@@ -1,3 +1,3 @@
-<ng-autocomplete (selected)="Selected($event)" [classes]="['']"
-                 [group]="group" [key]="'group'"></ng-autocomplete>
+<ng-auto-complete (selected)="Selected($event)" [classes]="['']"
+                 [group]="group" [key]="'group'"></ng-auto-complete>
 <div style="clear: both;"></div>
