New tests & updated code. Performance improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,50 +1,3 @@
-<!--<div>-->
-    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"-->
-                     <!--[group]="group1" [key]="'group1'"></ng-autocomplete>-->
-    <!--<div style="clear: both;"></div>-->
-<!--</div>-->
+<a [routerLink]="['/']">ROUTE1</a>-<a [routerLink]="['/route2']">ROUTE2</a>
 
-<!--<div>-->
-    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['fifty']"-->
-                     <!--[group]="group2" [key]="'group2'"></ng-autocomplete>-->
-    <!--<div style="clear: both;"></div>-->
-<!--</div>-->
-
-<!--<div>-->
-    <!--<button (click)="SetValues()">SET</button>-->
-    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['']"-->
-                     <!--[group]="group3" [key]="'group3'"></ng-autocomplete>-->
-    <!--<div style="clear: both;"></div>-->
-<!--</div>-->
-
-<!--<div>-->
-    <!--<ng-autocomplete (selected)="Selected($event)" [classes]="['']"-->
-                     <!--[group]="group4" [key]="'group4'"></ng-autocomplete>-->
-    <!--<div style="clear: both;"></div>-->
-<!--</div>-->
-
-<div>
-    <ng-auto-complete (selected)="Selected($event)"
-                     (no-result)="NoResult($event)"
-                     [classes]="['']"
-                     [group]="groupStress1" [key]="'item1'"></ng-auto-complete>
-    <div style="clear: both;"></div>
-</div>
-
-<ng-template #dropdownValue let-value let-hightlight="highlight">
-    <div [innerHTML]="hightlight"></div>
-</ng-template>
-
-<ng-template #placeholderValue let-value>
-    {{value.title}}
-</ng-template>
-
-<ng-template #noResults let-value>
-    Hey, you searched for: {{value}}. But there are no results!
-</ng-template>
-
-<!--<div>-->
-    <!--<app-ng-view>-->
-        <!--<app-ng-holder></app-ng-holder>-->
-    <!--</app-ng-view>-->
-<!--</div>-->
+<router-outlet></router-outlet>
